# esp_who_s3

./: README.md
object_detect/: dependencies.lock.esp32_s3_eye_noglib.pedestrian_detect  partitions2.csv  sdkconfig  sdkconfig.old
object_detect/main/: CMakeLists.txt  LIGHT_CONTROL_README.md  app_main.cpp  app_main_with_light_control.cpp  app_main_with_light_control_1.cpp  frame_cap_pipeline.cpp  idf_component.yml  light_controller.cpp  light_controller.hpp
